# abacus

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
src/: CMakeLists.txt  main.cpp
src/abacus/: CMakeLists.txt
src/abacus/include/abacus/: big_int.hpp  big_int_functions.hpp  number.hpp
src/ascript/: CMakeLists.txt
src/ascript/include/ascript/: ast.hpp  function.hpp  interpreter.hpp  lexer.hpp  parser.hpp  scanner.hpp  source_location.hpp  token.hpp  value.hpp
src/ascript/src/: ast.cpp  interpreter.cpp  lexer.cpp  parser.cpp  scanner.cpp  token.cpp
src/common/: CMakeLists.txt
src/common/include/common/: meta.hpp
tests/: CMakeLists.txt  big_int.cpp  big_int_functions.cpp  function.cpp  interpreter.cpp  lexer.cpp  number.cpp  parser.cpp  scanner.cpp
